Add watch tasks and browserify support

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="assets/bundle.css" />
+    <link rel="stylesheet" href="assets/index.css" />
 </head>
 <body>
 <!--[if lte IE 9]>
